--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,6 +25,39 @@ jobs:
       with:
         python-version: '3.10'
         
+    # Cache Python dependencies
+    - name: Cache Python dependencies
+      uses: actions/cache@v4.2.3
+      with:
+        path: |
+          ~/.cache/pip
+          ~/Library/Caches/pip  # macOS path
+        key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt', '**/setup.py') }}
+        restore-keys: |
+          ${{ runner.os }}-pip-
+        
+    # Cache Homebrew dependencies on macOS
+    - name: Cache Homebrew packages
+      if: runner.os == 'macOS'
+      uses: actions/cache@v4.2.3
+      with:
+        path: |
+          ~/Library/Caches/Homebrew
+          /opt/homebrew
+        key: ${{ runner.os }}-brew-${{ hashFiles('.github/workflows/build.yml') }}
+        restore-keys: |
+          ${{ runner.os }}-brew-
+          
+    # Cache apt packages on Ubuntu
+    - name: Cache apt packages
+      if: runner.os == 'Linux'
+      uses: actions/cache@v4.2.3
+      with:
+        path: /var/cache/apt/archives
+        key: ${{ runner.os }}-apt-${{ hashFiles('.github/workflows/build.yml') }}
+        restore-keys: |
+          ${{ runner.os }}-apt-
+        
     - name: Install system dependencies (Ubuntu)
       if: runner.os == 'Linux'
       run: |
@@ -38,13 +71,30 @@ jobs:
       run: |
         brew update
         brew install libtool pkg-config autoconf automake openssl ncurses redis gsl zeromq protobuf
+    
+    - name: Set macOS environment variables
+      if: runner.os == 'macOS'
+      run: |
+        echo "DYLD_LIBRARY_PATH=$DYLD_LIBRARY_PATH:/opt/homebrew/lib" >> $GITHUB_ENV
+        echo "LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/opt/homebrew/lib" >> $GITHUB_ENV
+        echo "CPLUS_INCLUDE_PATH=$CPLUS_INCLUDE_PATH:/opt/homebrew/include" >> $GITHUB_ENV
+        echo "C_INCLUDE_PATH=$C_INCLUDE_PATH:/opt/homebrew/include" >> $GITHUB_ENV
+        echo "CPATH=$CPATH:/opt/homebrew/include" >> $GITHUB_ENV
           
     - name: Install Python dependencies
       run: |
         python -m pip install --upgrade pip
         pip install posix_ipc zmq protobuf==3.20.0 astropy python-statemachine statemachine redis sphinx screeninfo
         
-    - name: Download waf
+    # Cache waf executable
+    - name: Cache waf executable
+      uses: actions/cache@v4.2.3
+      with:
+        path: waf
+        key: waf-2.0.24-${{ runner.os }}
+        
+    - name: Download waf (if not cached)
+      if: steps.cache-waf.outputs.cache-hit != 'true'
       run: |
         curl -o waf https://waf.io/waf-2.0.24
         chmod +x waf
@@ -58,13 +108,13 @@ jobs:
       run: |
         python waf test
         
-    # - name: Upload build artifacts
-    #   uses: actions/upload-artifact@v4.6.2
-    #   with:
-    #     name: build-output-${{ matrix.os }}
-    #     path: build/
-    #     if-no-files-found: warn
-    #     retention-days: 14
-    #     compression-level: 6
-    #     overwrite: true
-    #     include-hidden-files: false
+    - name: Upload build artifacts
+      uses: actions/upload-artifact@v4.2.3
+      with:
+        name: build-output-${{ matrix.os }}
+        path: build/
+        if-no-files-found: warn
+        retention-days: 14
+        compression-level: 6
+        overwrite: true
+        include-hidden-files: false
