adding artifact saving

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -117,17 +117,10 @@ jobs:
         python waf configure
         python waf build
     
-    # - name: Run tests
-    #   run: |
-    #     python waf test
-        
-    # - name: Upload build artifacts
-    #   uses: actions/upload-artifact@v4.2.3
-    #   with:
-    #     name: build-output-${{ matrix.os }}
-    #     path: build/
-    #     if-no-files-found: warn
-    #     retention-days: 14
-    #     compression-level: 6
-    #     overwrite: true
-    #     include-hidden-files: false
+    - name: Upload build artifacts
+      uses: actions/upload-artifact@v4
+      with:
+        name: build-output-${{ matrix.os }}
+        path: build/
+        retention-days: 14
+        if-no-files-found: warn
