--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,17 +11,10 @@ jobs:
   build:
     strategy:
       matrix:
-        include:
-          - os: ubuntu-latest
-            arch: x86_64
-          - os: macos-latest
-            arch: x86_64
-          - os: ubuntu-latest
-            arch: arm64
-            runs-on: ubuntu-latest-arm64
+        os: [ubuntu-latest, macos-latest]
       fail-fast: false  # Continue with other builds even if one fails
     
-    runs-on: ${{ matrix.runs-on || matrix.os }}
+    runs-on: ${{ matrix.os }}
     
     steps:
     - name: Checkout code
@@ -127,7 +120,7 @@ jobs:
     - name: Upload build artifacts
       uses: actions/upload-artifact@v4
       with:
-        name: build-output-${{ matrix.os }}-${{ matrix.arch }}
+        name: build-output-${{ matrix.os }}
         path: build/
         retention-days: 14
         if-no-files-found: warn
