Adds testing step to GitHub workflow. Makes a unit test fail for testing CI pipeline (temp).

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -124,3 +124,7 @@ jobs:
         path: build/
         retention-days: 14
         if-no-files-found: warn
+
+    - name: Test Suite
+      run: |
+        python waf --test
