--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,8 @@
-name: Build and Test Project
+name: CI Workflow
 
 on:
   push:
-    branches: [ main, Testing-Workflow]
+    branches: [ main ]
   pull_request:
     branches: [ main ]
   workflow_dispatch:  # Allows manual triggering
